# KFAC_PINN

./: 101.tex  2025_05_20_e8fffb9338419e358febg.tex  PROGRESS.md  README.md  discrepancies.md  pyproject.toml  requirements.txt  sync.bat  test_grad_abs.py
examples/: basic_pinn.ipynb  custom_network.ipynb  forward_laplacian_demo.ipynb  full_kfac_demo.ipynb  heat_equation.ipynb  pinnkfac_poisson.ipynb  pinnkfac_training_loop.ipynb  poisson_2d.ipynb  train_poisson.ipynb
kfac_pinn/: __init__.py  kfac.py  pdes.py  pinn.py  pinn_kfac.py  training.py
tests/: test_notebook_basic_pinn.py  test_notebook_custom_network.py  test_notebook_forward_laplacian_demo.py  test_notebook_full_kfac_demo.py  test_notebook_heat_equation.py  test_notebook_pinnkfac_poisson.py  test_notebook_pinnkfac_training_loop.py  test_notebook_poisson_2d.py  test_notebook_train_poisson.py  test_pinn_kfac.py
